# bropo

./: .gitignore  INSTALL  LICENSE  Makefile  annotated.html  annotated_dup.js  classes.html  classropo__quality__plugin_1_1ropo__quality__plugin-members.html  classropo__quality__plugin_1_1ropo__quality__plugin.html  classropo__quality__plugin_1_1ropo__quality__plugin.js  classropo__quality__plugin_1_1ropo__quality__plugin__coll__graph.map  classropo__quality__plugin_1_1ropo__quality__plugin__coll__graph.md5  classropo__quality__plugin_1_1ropo__quality__plugin__inherit__graph.md5  classropo__realtime_1_1options-members.html  classropo__realtime_1_1options.html  configure  configure.in  def.mk.in  dir_000001_000002.html  dir_697a6274b13731cc884d97cff24a4b07.html  dir_697a6274b13731cc884d97cff24a4b07.js  dir_697a6274b13731cc884d97cff24a4b07_dep.map  dir_697a6274b13731cc884d97cff24a4b07_dep.md5  dir_c437e554cd6ab630c9743f6a146d1a3b.html  dir_c437e554cd6ab630c9743f6a146d1a3b.js  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  files_dup.js  fmi__image_8c_source.html  fmi__image_8h_source.html  fmi__image__arith_8c_source.html  fmi__image__arith_8h_source.html  fmi__image__filter_8c_source.html  fmi__image__filter_8h_source.html  fmi__image__filter__line_8c_source.html  fmi__image__filter__line_8h_source.html  fmi__image__filter__morpho_8c_source.html  fmi__image__filter__morpho_8h_source.html  fmi__image__filter__speck_8c_source.html  (+180 more)
.github/workflows/: main.yml
config/: Makefile  ropo_options.xml
doc/: ropo.dox
doxygen/: Makefile  ropo_doxyfile.ini
pyropo/: Makefile  pyfmiimage.c  pyfmiimage.h  pyropo_compat.h  pyropogenerator.c  pyropogenerator.h  ropo_pgf_composite_quality_plugin.py  ropo_quality_plugin.py  ropo_realtime.py
ropo/: Makefile  fmi_image.c  fmi_image.h  fmi_image_arith.c  fmi_image_arith.h  fmi_image_filter.c  fmi_image_filter.h  fmi_image_filter_line.c  fmi_image_filter_line.h  fmi_image_filter_morpho.c  fmi_image_filter_morpho.h  fmi_image_filter_speck.c  fmi_image_filter_speck.h  fmi_image_filter_texture.c  fmi_image_filter_texture.h  fmi_image_histogram.c  fmi_image_histogram.h  fmi_image_restore.c  fmi_image_restore.h  fmi_meteosat.c  fmi_meteosat.h  fmi_radar_codes.h  fmi_radar_image.c  fmi_radar_image.h  fmi_sunpos.c  fmi_sunpos.h  fmi_util.c  fmi_util.h  rave_fmi_image.c  rave_fmi_image.h  rave_fmi_volume.c  rave_fmi_volume.h  rave_ropo_generator.c  rave_ropo_generator.h  ropo_hdf.c
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  (+25 more)
test/pytest/: FmiImageTest.py  Makefile  PyRopoGeneratorTest.py  RopoFullTestSuite.py  RopoTestSuite.py  RopoXmlTestSuite.py  ropo_quality_plugin_test.py  ropo_realtime_test.py
test/pytest/fixtures/: pvol_rix.h5
tools/: ci_test.sh  run_python_script.sh  test_ropo.sh
